rnd/ansible/ressources/k8s/keycloak/httproute.yml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: http-keycloak
  namespace: keycloak
spec:
  parentRefs:
  - name: kong
    kind: Gateway
    namespace: default
    sectionName: global-https
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /keycloak
    backendRefs:
    - name: keycloak
      kind: Service
      port: 80  
      namespace: keycloak
